fixed navbar collapse and margins

--- a/webApp/thirstyCat/src/main/resources/static/styles/main.css
+++ b/webApp/thirstyCat/src/main/resources/static/styles/main.css
@@ -22,14 +22,16 @@ body {
 	/* border: 2px solid blue; */
 	height: 35px;
 	top: 10vh;
-	width: 80%;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 9000px;	
 }
 
 #nav-ul {
-	width: 100%;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
